live/environments/lab/cluster/netpol-testing/default-deny.yaml
---
#default deny network policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: pap-dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
# allow to internal network DNS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-dns
  namespace: pap-dev
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/8
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
---
#allow to internal network database
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-db
  namespace: pap-dev
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/8
    ports:
    - port: 2027
      protocol: TCP
---
#allow to internal network LDAP
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-ldap
  namespace: pap-dev
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/8
    ports:
    - port: 2389
      protocol: TCP
---
#allow to internal network Web Services
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-http
  namespace: pap-dev
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/8
    ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
---
# Allow to internal network ADFS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-adfs
  namespace: pap-dev
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.13.2.245/32
    - ipBlock:
        cidr: 10.15.2.248/32
    ports:
    - protocol: TCP
      port: 443
